--- a/index.html
+++ b/index.html
@@ -3,45 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Website</title>
+    <title>Gaming Paradise</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #1c1c1c;
+            color: #fff;
         }
         header {
-            background-color: #333;
+            background-color: #111;
             color: #fff;
             padding: 1rem 0;
             text-align: center;
+            box-shadow: 0 4px 2px -2px gray;
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #444;
+            background-color: #222;
         }
         nav a {
             color: #fff;
             padding: 1rem;
             text-decoration: none;
+            transition: background-color 0.3s;
         }
         nav a:hover {
-            background-color: #555;
+            background-color: #444;
         }
         .container {
             padding: 2rem;
         }
         .game {
-            background-color: #fff;
+            background-color: #333;
             padding: 1rem;
             margin-bottom: 1rem;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+            display: flex;
+            align-items: center;
+            transition: transform 0.3s;
+        }
+        .game:hover {
+            transform: scale(1.02);
+        }
+        .game img {
+            width: 150px;
+            height: 100px;
+            object-fit: cover;
+            border-radius: 5px;
+            margin-right: 1rem;
+        }
+        .game h3 {
+            margin: 0;
+        }
+        .game p {
+            margin: 0.5rem 0 0;
+        }
+        .game a {
+            color: #1e90ff;
+            text-decoration: none;
+            font-weight: bold;
         }
         footer {
-            background-color: #333;
+            background-color: #111;
             color: #fff;
             text-align: center;
             padding: 1rem 0;
@@ -53,7 +80,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Game Website</h1>
+        <h1>Welcome to Gaming Paradise</h1>
     </header>
     <nav>
         <a href="#home">Home</a>
@@ -63,23 +90,32 @@
     <div class="container" id="home">
         <h2>Featured Games</h2>
         <div class="game">
-            <h3>Game 1</h3>
-            <p>Description of Game 1.</p>
-            <a href="#">Play Now</a>
+            <img src="https://via.placeholder.com/150" alt="Game 1">
+            <div>
+                <h3>Game 1</h3>
+                <p>Description of Game 1.</p>
+                <a href="#">Play Now</a>
+            </div>
         </div>
         <div class="game">
-            <h3>Game 2</h3>
-            <p>Description of Game 2.</p>
-            <a href="#">Play Now</a>
+            <img src="https://via.placeholder.com/150" alt="Game 2">
+            <div>
+                <h3>Game 2</h3>
+                <p>Description of Game 2.</p>
+                <a href="#">Play Now</a>
+            </div>
         </div>
         <div class="game">
-            <h3>Game 3</h3>
-            <p>Description of Game 3.</p>
-            <a href="#">Play Now</a>
+            <img src="https://via.placeholder.com/150" alt="Game 3">
+            <div>
+                <h3>Game 3</h3>
+                <p>Description of Game 3.</p>
+                <a href="#">Play Now</a>
+            </div>
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Game Website. All rights reserved.</p>
+        <p>&copy; 2024 Gaming Paradise. All rights reserved.</p>
     </footer>
 </body>
 </html>
